--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,9 @@
 <html lang="en">
   <head>
-    <title><%= pageTitle %></title>
-    <link rel="stylesheet" href="css/index.css" type="text/css"/>
+    <title>Recipe App</title>
+    <link rel="stylesheet" href="/css/common.css" type="text/css"/>
   </head>
   <body>
-    <% for(var i = 0; i < recipes.length; ++i) { %>
-       <% if (i % 2 == 0) { %>
-       <div class="recipe-class-orange">
-	 <li><%- recipes[i].name %></li>
-	 <p><%- recipes[i].description %></p>
-       </div>
-       <% } else { %>
-       <div class="recipe-class-blue">
-	 <li><%- recipes[i].name %></li>
-	 <p><%- recipes[i].description %></p>
-       </div>
-       <% } %>
-       <% } %>
+    <%- include('components/header') %>
   </body>
 </html>
