--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -4,15 +4,25 @@
   <div class="home-container">
     <a href="/">
       <img class="home-icon" src="/images/home_icon.png">
+      <p>Home</p>
     </a>
   </div>
-  <div class="options-container">
-    <img class="home-icon" src="/images/options_icon.png">
-  </div>
   <div class="filter-container">
-    <img class="home-icon" src="/images/filter_icon.png">
+    <a href="/">
+      <img class="filter-icon" src="/images/filter_icon.png">
+      <p>Filter</p>
+    </a>
   </div>
   <div class="search-container">
-    <img class="search-icon" src="/images/search_icon.png">
+    <a href="/recipes/search">
+      <img class="search-icon" src="/images/search_icon.png">
+      <p>Search</p>
+    </a>
+  </div>
+  <div class="add-container">
+    <a href="/recipes/add">
+      <img class="add-icon" src="/images/search_icon.png">
+      <p>Add New Recipe</p>
+    </a>
   </div>
 </div>
