--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,9 +1,10 @@
 <html lang="en">
   <head>
     <title>Error</title>
-    <link rel="stylesheet" href="css/index.css" type="text/css"/>
+    <link rel="stylesheet" href="/css/common.css" type="text/css"/>
   </head>
   <body>
+    <%- include('components/header') %>
     <%= message %>
   </body>
 </html>
