MAP : Formatting and unifying the look across all pages. Adding a success page for when recipes are added that redirects back to home page.  Added a plus icon for adding on mobile.  Formatted input page to look nicer on mobile.

--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,9 +1,14 @@
 @media (max-device-width: 479px) {
     .search-div
-{
-    text-align: center;
-}
+    {
+	text-align: center;
+    }
 
+    .hint
+    {
+	font-size: 0.75em;
+    }
+    
     .search-button
     {
 	font-size: 0.5em;
