--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -21,7 +21,7 @@
   </div>
   <div class="add-container">
     <a href="/recipes/add">
-      <img class="add-icon" src="/images/search_icon.png">
+      <img class="add-icon" src="/images/add_icon.png">
       <p>Add New Recipe</p>
     </a>
   </div>
