--- a/views/components/search.ejs
+++ b/views/components/search.ejs
@@ -2,7 +2,8 @@
 <div class="search-div">
   <form id="searchForm" action="/recipes/search" method="POST">
     <p>
-      Search for recipes that include:
+      Search for recipes that include:<br>
+      <span class="hint">(separate keywords with a space)</span>
     </p>
     <input type="text" name="searchParams" />
     <br>
