--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -1,13 +1,84 @@
 @media (max-device-width: 479px) {
     .upload-div
-{
-    text-align: center;
-}
+    {
+	text-align: left;
+	padding: 10px;
+    }
+
+    .name-input
+    {
+	width: 100%;
+	margin-bottom: 5px;
+    }
+
+    .add-new-item-button
+    {
+	margin-bottom: 5px;
+    }
+    
+    .quantity-input
+    {
+	width: 10%;
+	margin-right: 2px;
+	margin-bottom: 5px;
+    }
+
+    .measurement-input
+    {
+	width: 15%;
+	margin-right: 2px;
+	margin-bottom: 5px;
+    }
+
+    .ingredient-input
+    {
+	width: 70%;
+	margin-bottom: 5px;
+    }
+
+    .step-input
+    {
+	width: 100%;
+	margin-bottom: 5px;
+    }
+
+    .course-select
+    {
+	width: 100%;
+	font-size: 1em;
+	margin-bottom: 5px;
+    }
+
+    .prep-input
+    {
+	width: 70%;
+    	margin-bottom: 5px;
+    }
+
+    .cook-input
+    {
+	width: 70%;
+    	margin-bottom: 5px;
+    }
+
+    .cuisine-select
+    {
+	width: 100%;
+	font-size: 1em;
+    	margin-bottom: 5px;
+    }
+
+    .description-input
+    {
+	width: 100%;
+	height: 150px;
+    	margin-bottom: 5px;
+    }
 
     .upload-button
     {
 	font-size: 0.5em;
-    }
+    }        
 }
 
 @media (min-device-width: 480px) {
@@ -24,4 +95,18 @@
     {
 	font-size: 1em;
     }
+}
+
+
+/* For hiding drop down arrow on select buttons */
+select {
+    /* for Firefox */
+    -moz-appearance: none;
+    /* for Chrome */
+    -webkit-appearance: none;
+}
+
+/* For IE10 */
+select::-ms-expand {
+    display: none;
 }
