--- a/views/components/upload.ejs
+++ b/views/components/upload.ejs
@@ -5,33 +5,45 @@
     <p>
       Please include the following information about the recipe:
     </p>
-    <label for="name">Name: </label><input type="text" name="name" /><br>
+    <label for="name">Name: </label><input type="text" class="name-input" name="name" /><br>
     <div id="ingredientDiv" >
-      <label for="ingredients">Ingredients: </label><input type="text" name="quantity" /><input type="text" name="unit" /><input type="text" name="ingredient" /><button type="button" onclick="addNewIngredient()">+</button><br>
+      <label for="ingredients">Ingredients: </label>
+      <button type="button" class="add-new-item-button" onclick="addNewIngredient()">+</button>
+      <br>
+      <input type="text" name="quantity" class="quantity-input"/><select class="measurement-input">
+	<% measurements.forEach(function(measurement){ %>
+	<option value="<%= measurement %>"><%= measurement %></option>
+	<% }); %>
+      </select><input type="text" name="ingredient" class="ingredient-input" />      
+      <br>
     </div>
     <div id="stepDiv">
-      <label for="steps">Steps: </label><input type="text" name="steps" /><button type="button" onclick="addNewStep()">+</button><br>
+      <label for="steps">Steps: </label><button type="button" class="add-new-item-button" onclick="addNewStep()">+</button><br>
+      <input type="text" name="steps" class="step-input" />
     </div>
-    <label for="course">Course: </label>
-    <select name="course" multiple>
+    <label for="course">Course: </label><br>
+    <select name="course" class="course-select" multiple>
       <% courses.forEach(function(course){ %>
       <option value="<%= course %>"><%= course %></option>
       <% }); %>
     </select>
     <br>
-    <label for="prepTime">Prep Time: </label><input type="text" name="prepTime" /><br>
-    <label for="cookTime">Cook Time: </label><input type="text" name="cookTime" /><br>
-    <label for="cuisine">Cuisine: </label>
-    <select name="cuisine" multiple>
+    <label for="prepTime">Prep Time: </label><br>
+    <input type="text" name="prepTime" class="prep-input" /> Minutes<br>
+    <label for="cookTime">Cook Time: </label><br>
+    <input type="text" name="cookTime" class="cook-input" /> Minutes<br>
+    <label for="cuisine">Cuisine: </label><br>
+    <select name="cuisine" class="cuisine-select" multiple>
       <% cuisines.forEach(function(cuisine){ %>
       <option value="<%= cuisine %>"><%= cuisine %></option>
       <% }); %>
     </select>
     <br>
-    <label for="description">Description: </label><input type="text" name="description" /><br>
-    <label for="searchable">Status: </label><br>
-    <input type="radio" name="searchable" value="true"> Public<br>
-    <input type="radio" name="searchable" value="false"> Private<br>
+    <label for="description">Description: </label><br>
+    <input type="text" name="description" class="description-input" /><br>
+    <label for="searchable">Status: </label>
+    <input type="radio" name="searchable" value="true"> Public
+    <input type="radio" name="searchable" value="false"> Private
     <br>
     <br>
     <button type="submit" class="upload-button">UPLOAD</button>
