MAP : Fixing problem with text input by switching to text area.  Also handling promise rejection for the recipes route.

--- a/views/components/upload.ejs
+++ b/views/components/upload.ejs
@@ -40,7 +40,7 @@
     </select>
     <br>
     <label for="description">Description: </label><br>
-    <input type="text" name="description" class="description-input" /><br>
+    <textarea name="description" class="description-input" form="uploadForm"></textarea><br>
     <label for="searchable">Status: </label>
     <input type="radio" name="searchable" value="true"> Public
     <input type="radio" name="searchable" value="false"> Private
