--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -8,7 +8,7 @@
     </a>
   </div>
   <div class="filter-container">
-    <a href="/">
+    <a href="/recipes/filter">
       <img class="filter-icon" src="/images/filter_icon.png">
       <p>Filter</p>
     </a>
