--- a/views/success.ejs
+++ b/views/success.ejs
@@ -11,6 +11,6 @@
   </head>
   <body>
     <%- include('components/header') %>
-    You have successfully added a recipe.  If the page does not redirect within a few seconds please click below to havigate back to the home page.
+    <p>You have successfully added a recipe.  If the page does not redirect within a few seconds please click below to havigate back to the home page.</p>
   </body>
 </html>
