--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,29 +1,139 @@
-body
+html,body
 {
     margin: 0px;
     padding: 0px;
+    height: 100%;
+    background-color: #949b96;
 }
 
 @media (max-device-width: 479px) {
-    .recipe-title
+    p
     {
-	width: 100%;
-	max-height: 20px;
-	text-decoration: underline;
-	font-weight: bold;
-	text-align: center;
+	font-size: 3em;
     }
+
+    a
+    {
+	color: inherit
+    }
+
+    .selection-box-left
+    {
+	background-color: #2f4172;
+	float: left;
+	display: inline;
+	height: 50%;
+	width: calc(50% - 30px);
+	padding: 50% 10px 10px 10px;
+	border: 5px solid black;
+	cursor: pointer;
+	text-align: center;
+	font-weight: bold;
+	color: #c5c5c5;
+    }
+
+    .selection-box-right-upper
+    {
+	background-color: #2c423f;
+	float: left;
+	display: inline;
+	height: 25%;
+	width: calc(50% - 30px);
+	padding: 25% 10px 10px 10px;
+	border: 5px solid black;
+	cursor: pointer;
+	text-align: center;
+	font-weight: bold;
+	color: #c5c5c5;
+    }
+
+    .selection-box-right-lower
+    {
+	background-color: #829191;
+	float: left;
+	display: inline;
+	height: 25%;
+	width: calc(50% - 30px);
+	padding: 25% 10px 10px 10px;
+	border: 5px solid black;
+	cursor: pointer;
+	text-align: center;
+	font-weight: bold;
+	color: #c5c5c5;
+    }
+    
+    .selection-box:hover
+		    {
+			border: 5px groove black;
+			cursor: pointer;
+			filter: brightness(85%);
+			color: white;
+		    }
 
 }
 
 @media (min-device-width: 480px) {
-    .recipe-title
+p
     {
-	width: 100%;
-	max-height: 20px;
-	text-decoration: underline;
-	font-weight: bold;
-	text-align: center;
+	font-size: 3em;
     }
-   
+
+    a
+    {
+	color: inherit
+    }
+
+    .selection-box-left
+    {
+	background-color: #2f4172;
+	float: left;
+	display: inline;
+	height: 50%;
+	width: calc(50% - 30px);
+	padding: 50% 10px 10px 10px;
+	border: 5px solid black;
+	cursor: pointer;
+	text-align: center;
+	font-weight: bold;
+	color: #c5c5c5;
+    }
+
+    .selection-box-right-upper
+    {
+	background-color: #2c423f;
+	float: left;
+	display: inline;
+	height: 25%;
+	width: calc(50% - 30px);
+	padding: 25% 10px 10px 10px;
+	border: 5px solid black;
+	cursor: pointer;
+	text-align: center;
+	font-weight: bold;
+	color: #c5c5c5;
+    }
+
+    .selection-box-right-lower
+    {
+	background-color: #829191;
+	float: left;
+	display: inline;
+	height: 25%;
+	width: calc(50% - 30px);
+	padding: 25% 10px 10px 10px;
+	border: 5px solid black;
+	cursor: pointer;
+	text-align: center;
+	font-weight: bold;
+	color: #c5c5c5;
+    }
+    
+    .selection-box:hover
+		    {
+			border: 5px groove black;
+			cursor: pointer;
+			filter: brightness(85%);
+			color: white;
+		    }
+       
 }
