--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -4,26 +4,87 @@
 	color: inherit
     }
 
-    .recipe-box
-    {
-	background-color: #227722;
-	float: left;
-	display: inline;
-	height: 25%;
-	width: calc(100% - 50px);
-	padding: 10px;
-	margin: 10px;
-	border: 5px solid black;
-	border-radius: 10px;
-	box-shadow: 0px 0px 10px 5px;
-	cursor: pointer;
-    }
+    #recipes-list a:nth-child(n) .recipe-box
+			     {
+		    		 background-color: #2f4172;
+				 float: left;
+				 display: inline;
+				 height: 25%;
+				 width: calc(100% - 50px);
+				 padding: 10px;
+				 margin: 10px;
+				 border: 5px solid black;
+				 border-radius: 10px;
+				 box-shadow: 0px 0px 10px 5px;
+				 cursor: pointer;
+			     }
+    
+    #recipes-list a:nth-child(2n) .recipe-box
+			     {
+				 background-color: #2c423f;
+				 float: left;
+				 display: inline;
+				 height: 25%;
+				 width: calc(100% - 50px);
+				 padding: 10px;
+				 margin: 10px;
+				 border: 5px solid black;
+				 border-radius: 10px;
+				 box-shadow: 0px 0px 10px 5px;
+				 cursor: pointer;
+			     }
+
+    #recipes-list a:nth-child(3n) .recipe-box
+			     {
+				 background-color: #829191;
+				 float: left;
+				 display: inline;
+				 height: 25%;
+				 width: calc(100% - 50px);
+				 padding: 10px;
+				 margin: 10px;
+				 border: 5px solid black;
+				 border-radius: 10px;
+				 box-shadow: 0px 0px 10px 5px;
+				 cursor: pointer;
+			     }
 
     .recipe-box:hover
 		    {
 			border: 5px groove black;
 			cursor: pointer;
+			color: white;
 		    }
+
+    #recipes-list a:nth-child(n) .recipe-title
+			     {
+				 color: #c5c5c5;
+			     }
+    
+    #recipes-list a:nth-child(2n) .recipe-title
+			     {
+				 color: #c5c5c5;
+			     }
+    
+    #recipes-list a:nth-child(3n) .recipe-title
+			     {
+				 color: #000000;
+			     }
+    
+    #recipes-list a:nth-child(n) .recipe-short-description
+			     {
+				 color: #c5c5c5;
+			     }
+    
+    #recipes-list a:nth-child(2n) .recipe-short-description
+			     {
+				 color: #c5c5c5;
+			     }
+    
+    #recipes-list a:nth-child(3n) .recipe-short-description
+			     {
+				 color: #000000;
+			     }
     
     .recipe-description
     {
@@ -61,5 +122,5 @@
     .recipe-short-description
     {
 	display: none;
-    
-}
+	
+    }
