--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,4 +1,9 @@
 @media (max-device-width: 479px) {
+    input
+    {
+	font-size: 3em;
+    }
+
     .search-div
     {
 	text-align: center;
@@ -11,7 +16,7 @@
     
     .search-button
     {
-	font-size: 0.5em;
+	font-size: 3em;
     }
 }
 
