--- a/public/css/singleRecipe.css
+++ b/public/css/singleRecipe.css
@@ -1,7 +1,8 @@
 @media (max-device-width: 479px) {
     .single-recipe-box
     {
-	background-color: #227722;
+	background-color: #2c423f;
+	color: #c5c5c5;
 	height: calc(100% - 50px);
 	width: calc(100% - 50px);
 	padding: 10px;
@@ -14,7 +15,7 @@
 
     .ingredient-list
     {
-	border: 1px solid black;
+	border-top: 5px solid #000000;
 	padding: 5px;
 	margin-bottom: 5px;
     }
@@ -24,51 +25,27 @@
 	margin: 0px;
     }
 
+    .ingredient-list ul li
+    {
+	font-size: 2.5em;
+    }
+
     .step-list
     {
-	border: 1px solid black;
+	border-top: 5px solid #000000;
 	padding: 5px;
     }
 
     .step-list p
     {
 	margin: 0px;
+    }
+
+    .step-list ul li
+    {
+	font-size: 2.5em;
     }
 }
 
 @media (min-device-width: 480px) {
-    .single-recipe-box
-    {
-	background-color: #227722;
-	height: 90%;
-	width: calc(100% - 50px);
-	padding: 10px;
-	margin: 10px;
-	border: 5px solid black;
-	border-radius: 10px;
-	box-shadow: 0px 0px 10px 5px;
-    }
-
-    .ingredient-list
-    {
-	border: 1px solid black;
-	padding: 5px;
-	margin-bottom: 5px;
-    }
-
-    .ingredient-list p
-    {
-	margin: 0px;
-    }
-
-    .step-list
-    {
-	border: 1px solid black;
-	padding: 5px;
-    }
-
-    .step-list p
-    {
-	margin: 0px;
-    }    
 }
