--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -16,13 +16,13 @@
   <div class="search-container">
     <a href="/recipes/search">
       <img class="search-icon" src="/images/search_icon.png">
-      <p>Search</p>
+      <p>Search | </p>
     </a>
   </div>
   <div class="add-container">
     <a href="/recipes/add">
       <img class="add-icon" src="/images/add_icon.png">
-      <p>Add New Recipe</p>
+      <p>Add | </p>
     </a>
   </div>
 </div>
