--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 	<p>ALL RECIPES</p>
       </div>
     </a>
-    <div class="selection-right">
+    <div class="selection-box-right">
       <a href="/recipes/add">
 	<div class="selection-box selection-box-right-upper">
 	 <p>ADD YOUR OWN</p>
