--- a/public/css/common.css
+++ b/public/css/common.css
@@ -75,7 +75,7 @@ html,body
 @media (min-device-width: 480px) {
 p
     {
-	font-size: 3em;
+	font-size: 1em;
     }
 
     a
@@ -88,9 +88,9 @@ p
 	background-color: #2f4172;
 	float: left;
 	display: inline;
-	height: 50%;
+	height: calc(100% - 75px);
 	width: calc(50% - 30px);
-	padding: 50% 10px 10px 10px;
+	padding: 10px 10px 10px 10px;
 	border: 5px solid black;
 	cursor: pointer;
 	text-align: center;
@@ -98,14 +98,19 @@ p
 	color: #c5c5c5;
     }
 
+    .selection-box-right
+    {
+	height: calc(100% - 75px)
+    }
+    
     .selection-box-right-upper
     {
 	background-color: #2c423f;
 	float: left;
 	display: inline;
-	height: 25%;
+	height: calc(50% - 20px);
 	width: calc(50% - 30px);
-	padding: 25% 10px 10px 10px;
+	padding: 10px 10px 10px 10px;
 	border: 5px solid black;
 	cursor: pointer;
 	text-align: center;
@@ -118,9 +123,9 @@ p
 	background-color: #829191;
 	float: left;
 	display: inline;
-	height: 25%;
+	height: calc(50% - 20px);
 	width: calc(50% - 30px);
-	padding: 25% 10px 10px 10px;
+	padding: 10px 10px 10px 10px;
 	border: 5px solid black;
 	cursor: pointer;
 	text-align: center;
