--- a/public/css/formWrapper.css
+++ b/public/css/formWrapper.css
@@ -17,7 +17,7 @@
 	float: left;
 	width: 33%;
 	height: 100%;
-	background-color: #4444AA;
+	background-color: #2f4172;
     }
 
     .border-right
@@ -26,6 +26,6 @@
 	float: right;
 	width: 33%;
 	height: 100%;
-	background-color: #4444AA;
+	background-color: #2f4172;
     }
 }
