--- a/public/css/header.css
+++ b/public/css/header.css
@@ -79,10 +79,11 @@
 @media (min-device-width: 480px) {
     .header-container
     {
-	width: 100%;
-	height: 100px;
+	width: calc(100% - 20px);
+	height: 20px;
 	background-color: #c5c5c5;
-	border-bottom: 5px solid #000000
+	border-bottom: 5px solid #000000;
+	padding: 10px;
     }
 
     .home-container
@@ -94,12 +95,13 @@
 
     .home-container p
     {
-	display: none;
+	display: block;
+	margin: 0px;
     }
     
     .home-icon
     {
-	height: 100%;
+	display: none;
     }
 
     .search-container
@@ -111,12 +113,13 @@
 
     .search-container p
     {
-	display: none;
+	display: block;
+	margin: 0px;
     }
     
     .search-icon
     {
-	height: 100%;
+	display: none;
     }
 
     .filter-container
@@ -128,12 +131,13 @@
 
     .filter-container p
     {
-	display: none;
+	display: block;
+	margin: 0px;
     }
     
     .filter-icon
     {
-	height: 100%;
+	display: none;
     }
 
     .add-container
@@ -145,11 +149,12 @@
 
     .add-container p
     {
-	display: none;
+	display: block;
+	margin: 0px;
     }
     
     .add-icon
     {
-	height: 100%;
+	display: none;
     }
 }
