--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -19,7 +19,7 @@
 				 cursor: pointer;
 			     }
     
-    #recipes-list a:nth-child(2n) .recipe-box
+    #recipes-list a:nth-child(3n+2) .recipe-box
 			     {
 				 background-color: #2c423f;
 				 float: left;
@@ -34,7 +34,7 @@
 				 cursor: pointer;
 			     }
 
-    #recipes-list a:nth-child(3n) .recipe-box
+    #recipes-list a:nth-child(3n+3) .recipe-box
 			     {
 				 background-color: #829191;
 				 float: left;
@@ -59,16 +59,22 @@
     #recipes-list a:nth-child(n) .recipe-title
 			     {
 				 color: #c5c5c5;
+				 font-size: 3.5em;
+				 text-decoration: underline;
 			     }
     
-    #recipes-list a:nth-child(2n) .recipe-title
+    #recipes-list a:nth-child(3n+2) .recipe-title
 			     {
 				 color: #c5c5c5;
+				 font-size: 3.5em;
+				 text-decoration: underline;
 			     }
     
-    #recipes-list a:nth-child(3n) .recipe-title
+    #recipes-list a:nth-child(3n+3) .recipe-title
 			     {
 				 color: #000000;
+				 font-size: 3.5em;
+				 text-decoration: underline;
 			     }
     
     #recipes-list a:nth-child(n) .recipe-short-description
@@ -76,12 +82,12 @@
 				 color: #c5c5c5;
 			     }
     
-    #recipes-list a:nth-child(2n) .recipe-short-description
+    #recipes-list a:nth-child(3n+2) .recipe-short-description
 			     {
 				 color: #c5c5c5;
 			     }
     
-    #recipes-list a:nth-child(3n) .recipe-short-description
+    #recipes-list a:nth-child(3n+3) .recipe-short-description
 			     {
 				 color: #000000;
 			     }
@@ -98,29 +104,96 @@
 	color: inherit
     }
 
-    .recipe-box
-    {
-	background-color: #227722;
-	float: left;
-	display: inline;
-	height: 25%;
-	width: calc(25%);
-	padding: 10px;
-	margin: 10px;
-	border: 5px solid black;
-	border-radius: 10px;
-	box-shadow: 0px 0px 10px 5px;
-	cursor: pointer;
-    }
+    #recipes-list a:nth-child(n) .recipe-box
+			     {
+		    		 background-color: #2f4172;
+				 float: left;
+				 display: inline;
+				 height: 25%;
+				 width: calc(25% - 50px);
+				 padding: 10px;
+				 margin: 10px;
+				 border: 5px solid black;
+				 border-radius: 10px;
+				 box-shadow: 0px 0px 10px 5px;
+				 cursor: pointer;
+			     }
+    
+    #recipes-list a:nth-child(3n+2) .recipe-box
+			     {
+				 background-color: #2c423f;
+				 float: left;
+				 display: inline;
+				 height: 25%;
+				 width: calc(25% - 50px);
+				 padding: 10px;
+				 margin: 10px;
+				 border: 5px solid black;
+				 border-radius: 10px;
+				 box-shadow: 0px 0px 10px 5px;
+				 cursor: pointer;
+			     }
+
+    #recipes-list a:nth-child(3n+3) .recipe-box
+			     {
+				 background-color: #829191;
+				 float: left;
+				 display: inline;
+				 height: 25%;
+				 width: calc(25% - 50px);
+				 padding: 10px;
+				 margin: 10px;
+				 border: 5px solid black;
+				 border-radius: 10px;
+				 box-shadow: 0px 0px 10px 5px;
+				 cursor: pointer;
+			     }
 
     .recipe-box:hover
 		    {
 			border: 5px groove black;
 			cursor: pointer;
+			color: white;
 		    }
+
+    #recipes-list a:nth-child(n) .recipe-title
+			     {
+				 color: #c5c5c5;
+				 font-size: 1.5em;
+				 text-decoration: underline;
+			     }
+    
+    #recipes-list a:nth-child(3n+2) .recipe-title
+			     {
+				 color: #c5c5c5;
+				 font-size: 1.5em;
+				 text-decoration: underline;
+			     }
+    
+    #recipes-list a:nth-child(3n+3) .recipe-title
+			     {
+				 color: #000000;
+				 font-size: 1.5em;
+				 text-decoration: underline;
+			     }
+    
+    #recipes-list a:nth-child(n) .recipe-description
+			     {
+				 color: #c5c5c5;
+			     }
+    
+    #recipes-list a:nth-child(3n+2) .recipe-description
+			     {
+				 color: #c5c5c5;
+			     }
+    
+    #recipes-list a:nth-child(3n+3) .recipe-description
+			     {
+				 color: #000000;
+			     }
     
     .recipe-short-description
     {
 	display: none;
-	
     }
+}
