--- a/public/css/singleRecipe.css
+++ b/public/css/singleRecipe.css
@@ -10,7 +10,6 @@
 	border: 5px solid black;
 	border-radius: 10px;
 	box-shadow: 0px 0px 10px 5px;
-	overflow-y: scroll;
     }
 
     .ingredient-list
@@ -48,4 +47,39 @@
 }
 
 @media (min-device-width: 480px) {
+    .single-recipe-box
+    {
+	background-color: #2c423f;
+	color: #c5c5c5;
+	height: calc(100% - 50px);
+	width: calc(100% - 50px);
+	padding: 10px;
+	margin: 10px;
+	border: 5px solid black;
+	border-radius: 10px;
+	box-shadow: 0px 0px 10px 5px;
+    }
+
+    .ingredient-list
+    {
+	border-top: 5px solid #000000;
+	padding: 5px;
+	margin-bottom: 5px;
+    }
+
+    .ingredient-list p
+    {
+	margin: 0px;
+    }
+
+    .step-list
+    {
+	border-top: 5px solid #000000;
+	padding: 5px;
+    }
+
+    .step-list p
+    {
+	margin: 0px;
+    }
 }
