--- a/public/css/singleRecipe.css
+++ b/public/css/singleRecipe.css
@@ -12,6 +12,18 @@
 	box-shadow: 0px 0px 10px 5px;
     }
 
+    .cuisines-list
+    {
+	border-top: 5px solid #000000;
+	padding: 5px;
+	margin-bottom: 5px;
+    }
+
+    .cuisines-list p
+    {
+	margin: 0px;
+    }
+
     .ingredient-list
     {
 	border-top: 5px solid #000000;
@@ -58,6 +70,18 @@
 	border: 5px solid black;
 	border-radius: 10px;
 	box-shadow: 0px 0px 10px 5px;
+    }
+
+    .cuisines-list
+    {
+	border-top: 5px solid #000000;
+	padding: 5px;
+	margin-bottom: 5px;
+    }
+
+    .cuisines-list p
+    {
+	margin: 0px;
     }
 
     .ingredient-list
