--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -25,4 +25,10 @@
       <p>Add | </p>
     </a>
   </div>
+    <div class="login-container">
+    <a href="/login">
+      <img class="login-icon" src="/images/login_icon.png">
+      <p>Login | </p>
+    </a>
+  </div>
 </div>
